[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,7 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Hi! This is syed monsoor Ahmed. This is mu first webapp.
+            Hi! This is syed monsoor Ahmed. This is my first webapp.
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
